# analog-signal-streaming

./: README.md
client/: CMakeLists.txt  CMakeUserPresets.json
client/src/: main.cpp
server/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
server/src/: hello_world.cpp  main.cpp
